--- a/templates/controller.template.hbs
+++ b/templates/controller.template.hbs
@@ -1,5 +1,5 @@
 import { Request, Response } from "express";
-import { create{{titleCase name}}, find{{titleCase name}}ById } from "../service/{{snakeCase name}}.service"
+import { create{{titleCase name}} } from "../service/{{snakeCase name}}.service"
 
 export async function create{{titleCase name}}Handler(req: Request, res: Response){
 
