--- a/templates/model.template.hbs
+++ b/templates/model.template.hbs
@@ -1,14 +1,5 @@
-import { getModelForClass, prop } from "@typegoose/typegoose";
-
-export class {{titleCase name}} {
-    @prop({required: true})
-    name: string
+type {{titleCase name}} = {
+  //Ajouter les propriétés
 }
 
-const {{titleCase name}}Model = getModelForClass({{titleCase name}}, {
-  schemaOptions: {
-    timestamps: true,
-  },
-});
-
-export default {{titleCase name}}Model;
+export { {{titleCase name}} };
