CLI-48 Création de l'endpoint pour créer un client

--- a/templates/model.template.hbs
+++ b/templates/model.template.hbs
@@ -1,5 +1,5 @@
-type {{titleCase name}} = {
-  //Ajouter les propriétés
-}
+import { IsBoolean, IsEmail, IsString } from "class-validator";
 
-export { {{titleCase name}} };
+export default class {{titleCase name}} {
+  //Ajouter les propriétés
+ }
