--- a/templates/service.template.hbs
+++ b/templates/service.template.hbs
@@ -1,4 +1,4 @@
-import { {{titleCase name}} } from "../model/{{snakeCase name}}.model";
+import {{titleCase name}} from "../model/{{snakeCase name}}.model";
 import { supabase } from "../utils/supabase";
 
 // export function create{{titleCase name}}(input: Partial<{{titleCase name}}>) {
@@ -7,9 +7,8 @@ import { supabase } from "../utils/supabase";
 
 export async function create{{titleCase name}}(body:any) {
   const response = await supabase
-  .from<{{titleCase name}}>('messages') // Message maps to the type of the row in your database.
-  .select('*, author:user_id(username)')
-  .match({ channel_id: 2 }) // Your IDE will be able to help with auto-completion.
+  .from<{{titleCase name}}>('{{name}}') // Message maps to the type of the row in your database.
+  .select('*')
 response.data // Response data will be of type Array<Message>.
   return response;
 }
